/*
 * Copyright (C) 2018 Roman Vaivod
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#ifndef LTTLWHWHT_TRACEARGUMENTSBUILDER_H
#define LTTLWHWHT_TRACEARGUMENTSBUILDER_H

#include "arguments.h"
#include "extracearguments.h"
#include "wire.h"
#include "cmdlineargs.h"
#include "cmdlineargsparser.h"
#include "android.h"
#include "kerneltracesystem.h"

#include <string>

class ExtraceArgumentsBuilder {
  public:
    ExtraceArgumentsBuilder();
    const ExtraceArguments * build(const Wire & wire, const CmdLineArgs & cmdLineArgs) const;
  private:
    map<string, Android::TraceCategory> m_AndroidTraceCategories;
    map<string, KernelTraceSystem::TraceCategory> m_KernelTraceCategories;
    bool tryPutCategoriesFromFile(ExtraceArguments * extraceArguments, const string & filename) const;
    void registerCmdLineOpts(CmdLineArgsParser & cmdLineArgsParser) const;
    ExtraceArguments * createHelpExtraceArguments(const string & appName) const;
    ExtraceArguments * createExtraceArguments(const Arguments & arguments) const;
    const string & getHelpMessage() const;
};

#endif // LTTLWHWHT_TRACEARGUMENTSBUILDER_H