/*
 * Copyright (C) 2018 Roman Vaivod
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

#ifndef LTTLWHWHT_SIGNAL_H
#define LTTLWHWHT_SIGNAL_H

class Signal {
  public:
    void fire();
    bool isFired() const;
    void turnOn();
    void turnOff();
  private:
    bool m_TurnedOn = true;
    bool m_Fired = false;
};

#endif // LTTLWHWHT_SIGNAL_H